--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,7 @@ html
 		meta(charset="utf8")
 		title Webpack-personal-template
 		link(type="text/css" rel="stylesheet" href="static/styles/styles.css")
+		script(src="./scripts/scripts.js")
 	body
 		header
 			a(href="https://github.com/whiteGloom/Webpack-personal-template" target="_blank" rel="noopener noreferrer")
@@ -16,8 +17,10 @@ html
 					li
 						a(href="https://webpack.js.org/" target="_blank" rel="noopener noreferrer") Webpack
 					li
-						a(href="https://pugjs.org/api/getting-started.html" target="_blank" rel="noopener noreferrer") Pug
+						a(href="https://pugjs.org/" target="_blank" rel="noopener noreferrer") Pug
 					li
 						a(href="http://stylus-lang.com/" target="_blank" rel="noopener noreferrer") Stylus
 					li
 						a(href="https://jasmine.github.io/" target="_blank" rel="noopener noreferrer") Jasmine
+					li
+						a(href="https://eslint.org/" target="_blank" rel="noopener noreferrer") ES Lint
