--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,8 +3,11 @@ html
 	head
 		meta(charset="utf8")
 		title Webpack-personal-template
+		link(rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon")
+		meta(name="description" content="description")
+		meta(name="keywords" content="keywords")
+		meta(name="viewport" content="initial-scale=1.0, width=device-width")
 		link(type="text/css" rel="stylesheet" href="static/styles/styles.css")
-		script(src="./scripts/scripts.js")
 	body
 		header
 			a(href="https://github.com/whiteGloom/Webpack-personal-template" target="_blank" rel="noopener noreferrer")
@@ -24,3 +27,4 @@ html
 						a(href="https://jasmine.github.io/" target="_blank" rel="noopener noreferrer") Jasmine
 					li
 						a(href="https://eslint.org/" target="_blank" rel="noopener noreferrer") ES Lint
+		script(src="./scripts/scripts.js")
